--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,17 @@
-# Byte-compiled / optimized / DLL files
+node_modules
+
+### Django ###
+*.log
+*.pot
+*.pyc
 __pycache__/
 *.py[cod]
 *$py.class
+
+db.sqlite3
+db.sqlite3-journal
+media
+
 
 # C extensions
 *.so
